--- a/gradle.properties
+++ b/gradle.properties
@@ -36,7 +36,7 @@ mod_id=extensiontest
 # The human-readable display name for the mod.
 mod_name=extensiontest
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=Unlicense
+mod_license=GPL-3.0
 # The mod version. See https://semver.org/
 mod_version=1.0-SNAPSHOT
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
@@ -44,6 +44,6 @@ mod_version=1.0-SNAPSHOT
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=tech.lq0
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=
+mod_authors=Light_Quanta
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=
+mod_description=Example Extension Mod for SuperbWarfare
